--- a/100/邦购/css/main.css
+++ b/100/邦购/css/main.css
@@ -4,8 +4,12 @@ ul li{list-style:none;}
 img{max-width:100%;}
 p{padding: 0;margin: 0;}
 h1{padding: 0;margin: 0;}
+a{text-decoration: none;}
 /*通配 end*/
 /*header begin*/
+#navsum{width: 100%; background-color: #ffffff; position: absolute; display: none}
+#navsum li{line-height: 28px;}
+#navsum a {text-decoration:none; color: #333; font-size: 1.5em;}
 .header{width: 100%;padding-bottom: 8.5em;border-bottom: 1px #eaeaeb solid;}
 .header-left{float:left;width: 5.625%;margin-top: 4.666666em;text-indent:2.5em;}
 .header-logo{float: left;width: 90.3125%;margin-top: 1.666666em; text-align: center;}
@@ -13,8 +17,23 @@ h1{padding: 0;margin: 0;}
 /*header end*/
 /*banner begin*/
 .banner{width: 100%;text-align: center;color: #01273b}
-.banner .banner-bg{background: url(../images/banner-bg_02.png)no-repeat;width: 100%;height: 783px;}
-.banner .c1{font-size: 2em;font-weight: 600; padding-top: 168px;}
-.banner .c2{font-size: 2em;font-weight: 600;}
-.banner h1{font-size: 6em;font-weight: 600;}
+.banner .banner-bg{background: url(../images/banner-bg_02.png)no-repeat ;width: 100%;height: 783px;margin-right: auto;}
+.banner .c1{font-size: 2em;font-weight: 600; padding-top: 11.625rem;}
+.banner .c2{font-size: 2em;font-weight: 600; padding-top: 3.125rem;}
+.banner h1{font-size: 6em;font-weight: 600;padding-top: 3.125rem;}
+.banner .c3{padding-top: 3.125rem;}
 /*banner end*/
+/*main begin*/
+.main{width: 100%; text-align: center;}
+.main .main-top1{padding-top: 4.875rem; margin:0 auto;}
+.main .main-top2{font-size: 2.5em; color: #1c1f23; padding-top: 1.625em; font-weight: 600;}
+.main .main-top3{font-size: 1em;color: #616365; padding-top: 1.625rem;}
+.main .main-top4{font-size: 1em;color: #b6b6b6; padding-top: 1.625rem}
+.main .main-top5{font-size: 1em;color: #727272; padding-top: 0.75rem;}
+.main-center{padding-top: 1.625rem; display: block; text-align: center;}
+.main.center a{float: left;}
+/*main end*/
+/*footer begin*/
+.footer{width: 100%; padding-top: 1.25rem; border-top: 1px #eaeaeb solid;margin-top:4.875rem;}
+.footer p{padding-top: 1.25rem;padding-bottom: 1.25rem;}
+/*footer end*/
