--- a/100/邦购/css/main.css
+++ b/100/邦购/css/main.css
@@ -17,7 +17,13 @@ a{text-decoration: none;}
 /*header end*/
 /*banner begin*/
 .banner{width: 100%;text-align: center;color: #01273b}
-.banner .banner-bg{background: url(../images/banner-bg_02.png)no-repeat ;width: 100%;height: 783px;margin-right: auto;}
+.banner .banner-bg{
+            background:url(../images/banner-bg_02.png)no-repeat;
+            background-position: center;
+            width: 100%;
+            height: 783px;
+            margin-right: auto;
+        }
 .banner .c1{font-size: 2em;font-weight: 600; padding-top: 11.625rem;}
 .banner .c2{font-size: 2em;font-weight: 600; padding-top: 3.125rem;}
 .banner h1{font-size: 6em;font-weight: 600;padding-top: 3.125rem;}
