--- a/100/邦购/css/main.css
+++ b/100/邦购/css/main.css
@@ -13,7 +13,7 @@ a{text-decoration: none;}
 .header{width: 100%;padding-bottom: 8.5em;border-bottom: 1px #eaeaeb solid;}
 .header-left{float:left;width: 5.625%;margin-top: 4.666666em;text-indent:2.5em;}
 .header-logo{float: left;width: 90.3125%;margin-top: 1.666666em; text-align: center;}
-.header-right{float: right;width: 4.0625%;margin-top: 4.666666em;}
+.header-right{ float: right;width: 4.0625%;margin-top: 4.666666em;position: absolute;right: 1.875rem}
 /*header end*/
 /*banner begin*/
 .banner{width: 100%;text-align: center;color: #01273b}
