--- a/100/bg/css/main.css
+++ b/100/bg/css/main.css
@@ -1,5 +1,6 @@
 body{
 	padding-top: 50px;
+	padding-bottom: 50px;
 }
 /*header_begin*/
 #logo{
@@ -17,5 +18,8 @@ body{
 }
 .carousel img{			
 	width: 100%;
+}
+footer{
+	margin-top: 50px;
 }
 /*banner_end*/
